@@ -51,7 +51,7 @@ class DiscussMessagesRemovePostController extends DiscussController {
         return $this->modx->lexicon('discuss.remove_message_header',array('title' => $this->thread->get('title')));
     }
     public function getSessionPlace() {
-        return 'message-post-remove:'.$this->thread->get('id');
+        return 'messages/remove_post:thread='.$this->thread->get('id');
     }
     public function process() {
         $this->setPlaceholders($this->thread->toArray());
